remove grid gap (was causing bugs)

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ body {
   height: 90vw;
   max-height: 90vh;
   margin: 0 auto;
-  gap: 1px;
   margin-top: 2em;
 }
 .cell {
